# HomeAutomationPython

./: .gitignore  pyproject.toml
app/: main.py
app/controllers/: device_controller.py  room_controller.py
app/core/: firebase_init.py
app/models/: user.py
app/schemas/: alarm.py  device.py  room.py
app/services/: device_service.py  room_service.py  scheduled_job.py
